分析 教程 加入数据处理过程

--- a/nbs/004_data.preparation.ipynb
+++ b/nbs/004_data.preparation.ipynb
@@ -257,6 +257,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "df_well_list = []\n",
+    "test_data = {}\n",
+    "for i in range(well_num):\n",
+    "    # the test and train data will be the unnormalized data\n",
+    "    filename = data_prefix.format(i+1)\n",
+    "    df = read_file(filename)\n",
+    "    df['DEPT'] = np.arange(1, len(df)+1)\n",
+    "    df_well_list.append(df)\n",
+    "    if i+1 in test_ID:\n",
+    "        test_data[i+1] = df[columns_target]\n",
+    "dataset = pd.concat(df_well_list, axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
